; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_window.c_may_open_tabpage.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_window.c_may_open_tabpage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@cmdmod = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@postponed_split_tab = common dso_local global i32 0, align 4
@FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @may_open_tabpage() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cmdmod, i32 0, i32 0), align 4
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @postponed_split_tab, align 4
  br label %9

7:                                                ; preds = %0
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cmdmod, i32 0, i32 0), align 4
  br label %9

9:                                                ; preds = %7, %5
  %10 = phi i32 [ %6, %5 ], [ %8, %7 ]
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %9
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cmdmod, i32 0, i32 0), align 4
  store i32 0, i32* @postponed_split_tab, align 4
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @win_new_tabpage(i32 %14)
  store i32 %15, i32* %1, align 4
  br label %18

16:                                               ; preds = %9
  %17 = load i32, i32* @FAIL, align 4
  store i32 %17, i32* %1, align 4
  br label %18

18:                                               ; preds = %16, %13
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @win_new_tabpage(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
